--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 771064095335907369
-textchannel = 767720991367364608
-ladderchannel = 767722957845168169
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 767722957845168169
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
@@ -25,4 +25,4 @@ sheetname =
 inputcell = 
 outputcell = 
 
-voice_use = 1
+voice_use = 1
