--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 771064095335907369
 textchannel = 767720991367364608
 ladderchannel = 
 jungsanchannel = 
