--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,4 +1,18 @@
 ﻿-----고정보스-----
+bossname = 월드보스
+bosstime = 12:00
+genPeriod = 24:00
+startDate = 2020-12-24
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 피의늪지대로 오세요
+
+bossname = 월드보스
+bosstime = 20:00
+genPeriod = 24:00
+startDate = 2020-12-24
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 처형터로 오세요
+
 bossname = 람달
 bosstime = 13:00
 genPeriod = 24:00
@@ -89,4 +103,3 @@ genPeriod = 168:00
 startDate = 2020-12-28
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 셀리호든의 봉인으로 오세요
-
