--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -4,14 +4,14 @@ bosstime = 12:00
 genPeriod = 24:00
 startDate = 2020-12-24
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 피의늪지대로 오세요
+alert_ment = 탐 입니다.
 
 bossname = 월드보스
 bosstime = 20:00
 genPeriod = 24:00
 startDate = 2020-12-24
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 처형터로 오세요
+alert_ment = 탐 입니다.
 
 bossname = 람달
 bosstime = 13:00
