--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 767720991367364608
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 767722957845168169
 itemchannel = 
 
 before_alert = 1
